# euclid

./: .env  Cargo.toml
assets/css/: main.css
assets/templates/: base-page.handlebars  edit-page.handlebars  page-not-found.handlebars  view-page.handlebars
migrations/: 0001_create_contents_table.up.sql  0002_create_revisions_table.up.sql  0003_create_pages_table.up.sql  0004_alter_revisions_table_add_pages_fkey.down.sql  0004_alter_revisions_table_add_pages_fkey.up.sql
src/: error.rs  lib.rs  main.rs
src/app/: mod.rs
src/app/controller/: edit_page.rs  load_asset.rs  mod.rs  submit_page.rs  view_page.rs
src/app/routing/: asset.rs  mod.rs  page.rs  root.rs
src/parse/: mod.rs
src/query/: page.rs
