[package]
name = "euclid"
version = "0.1.0"
edition = "2021"
authors = ["Ahraman <ahraman.programming@gmail.com>"]

[dependencies]
dotenvy = "0.15.7"
handlebars = "6.2.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "net",
] }
time = "0.3.36"
axum = {version="0.7.9", features = ["macros", "tokio", "multipart"]}
sqlx = { version = "0.8.2", features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
